--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -9,4 +9,8 @@ server {
     location /api {
         proxy_pass http://api:8000;
     }
+
+    location / {
+        proxy_pass http://client:80;
+    }
 }
